--- a/first-html-file.html
+++ b/first-html-file.html
@@ -5,8 +5,12 @@
     <title>First HTML File</title>
 
     <style>
+        body {
+            color: white;
+            background-color: black;
+        }
         p {
-            border: 1px solid black;
+            border: 1px solid blue;
             padding: 5px;
             border-radius: 5px;
             margin: 10px;
