--- a/first-functions.html
+++ b/first-functions.html
@@ -116,32 +116,43 @@
 // }
 //
 
-    function myName (aaron); {
-        console.log(myname.toUpperCase());}
-
-    function lowerCase(string) {
-        return string.toLowerCase();
-    }
-
-    console.log(lowerCase(""))
-
-    function trimString(string) {
-        return string.trim();
-    }
-    }
-
-    function stringLength(string){
-    return string.length;
-    }
+    // function myName (aaron); {
+    //     console.log(myname.toUpperCase());}
+    //
+    // function lowerCase(string) {
+    //     return string.toLowerCase();
+    // }
+    //
+    // console.log(lowerCase(""))
+    //
+    // function trimString(string) {
+    //     return string.trim();
+    // }
+    // }
+    //
+    // function stringLength(string){
+    // return string.length;
+    // }
 
 //    == vs. ===
+//
+//     let  numericString = "42";
+//     let theAnswer = 42;
+//
+//     function isNumber(value) {
+//         return typeof value === "number";
+//     }
 
-    let  numericString = "42";
-    let theAnswer = 42;
+    function multiproduct(product1,product2) {
+        if (isNaN(parseFloat(product1)) || isNaN(parseFloat(product2))){
+            return false;
+        } else {
+            return parseFloat(product1) * parseFloat(product2);
+        }
 
-    function isNumber(value) {
-        return typeof value === "number";
+
     }
+
 </script>
 
 </body>
