--- a/loops.html
+++ b/loops.html
@@ -5,7 +5,12 @@
     <title>Loops</title>
 </head>
 <body>
-<script src="js/while.js"></script>
+<script src="js/while.js">
+</script>
+<script src="js/break_and_continue.js">
+
+</script>
+<script src="js/for_loops.js"></script>
 
 </body>
 </html>
