--- a/github.html
+++ b/github.html
@@ -5,6 +5,34 @@
     <title>GitHub Teams</title>
 </head>
 <body>
-
+<image src="img/githubicon.jpeg"></image>
+    <section>
+<ul>
+    <li><a href="#">Pull requests</a></li>
+    <li><a href="#">Issues</a></li>
+    <li><a href="#">Marketplace</a></li>
+    <li><a href="#">Explore</a></li>
+</ul>
+    </section>
+<img src="img/codeup-logo-with-Codey.png"></image>
+<h3>Codeup</h3>
+    <section>
+<ul>
+    <li><a href="#">Repos</a> 39</li>
+    <li><a href="#">People</a> 39</li>
+    <li><a href="#">Teams</a> 39</li>
+    <li><a href="#">Projects</a> 39</li>
+    <li><a href="#">Settings</a> 39</li>
+</ul>
+    </section>
+<p>Codeup's dev team<br>
+</p><img src="https://fer-uig.glitch.me" alt="user-icon" /><a href="#">Kent Beck</a><br>KenBeck<br> Member<br> X team members<br>
+</p><img src="https://fer-uig.glitch.me?uuid=1" alt="user-icon" /><a href="#">Codeup Staff</a><br>CodeupStaff<br> Member<br> X team members<br>
+</p><img src="https://fer-uig.glitch.me?uuid=777" alt="user-icon" /><a href="#">Martin F</a><br>MartinF<br> Member<br> X team members<br>
+    <footer>
+&copy; 2018 Github. Inc.<br>
+<a href="#">Terms</a> <a href="#">Privacy</a> <a href="#">Security</a> <a href="#">Status</a> <a href="#">Help</a><br>
+<a href="#">Contact</a> <a href="#">API</a> <a href="#">Training</a>
+    </footer>
 </body>
 </html>
