intro-to css and forms

--- a/forms.html
+++ b/forms.html
@@ -32,7 +32,7 @@
     </label>internet advertisement<br>
     <label for="other">
         <input id="other" type="radio" name="other" value="other">
-    </label>Other <br>
+    </label>other<br>
 </form>
     <h3>What is your browser preference?</h3>
 
@@ -47,7 +47,7 @@
                 </lable>
         </form>
 
-    <p><em>When finsih double check selection and..</em></p>
+    <p><em>When finish double check selection and..</em></p>
 
         <form method="POST" action="https://request-inspector.glitch.me/">
 
