--- a/welcome.html
+++ b/welcome.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <header>
-<h1>Welcome to Veridian Dynamics!</h1>
+<h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
 <p>At Veridian Dynamics, <strong>we</strong> <em>solve your problems with technology.</em></p>
 <hr>
 <h2><strong>Core Values</strong></strong></h2>
