--- a/welcome.html
+++ b/welcome.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div id="changes">
     <header>
 <h1 class="fancy-header">Welcome to Veridian Dynamics!</h1>
 <p>At Veridian Dynamics, <strong>we</strong> <em>solve your problems with technology.</em></p>
@@ -67,5 +68,6 @@
     </footer>
 
 </ul>
+    </div>
 </body>
 </html>
