--- a/forms.html
+++ b/forms.html
@@ -6,19 +6,26 @@
 </head>
         <body>
 
+        <style>
+            body {
+                background-color: slategrey;
+                color: white;
+            }
+        </style>
+
 <h3>Please enter your email address:</h3>
 
-<form method="POST" action="https://request-inspector.glitch.me/">
+<form method="GET" action="https://request-inspector.glitch.me/">
 
     <input type="text" name="email" placeholder="Enter your email address"><br>
 </form>
     <h3>Tell us a about yourself?</h3>
 
-<form method="POST" action="https://request-inspector.glitch.me/">
+<form method="GET" action="https://request-inspector.glitch.me/">
     <label><textarea name="bio"></textarea></label>
 </form>
 
-<form method="POST" action="https://request-inspector.glitch.me/">
+<form method="GET" action="https://request-inspector.glitch.me/">
 
     <h3>How did you hear about us?</h3>
     <label for="billboard">
@@ -36,7 +43,7 @@
 </form>
     <h3>What is your browser preference?</h3>
 
-        <form method="POST" action="https://request-inspector.glitch.me/">
+        <form method="GET" action="https://request-inspector.glitch.me/">
 
                 <lable>
 <select name="coffee_preference">
