addition-to-loops

--- a/arrays-lecture.html
+++ b/arrays-lecture.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Arrays</title>
 </head>
-<body>
+<body style="background-color:black;">
+
 <script src="js/arrays-lecture.js">
 
 </script>
