flexbox-exercise complete

--- a/flexbox-cards.html
+++ b/flexbox-cards.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Flexbox cards</title>
+    <link rel="stylesheet" href="css/flexbox-cards.css">
     <!-- TODO: You have a better structure in local your folder, move the following file and change the link path so it's being saved in the css folder -->
-    <link rel="stylesheet" href="flexbox-cards.css">
+
 </head>
 <body>
 <div class="container">
@@ -29,7 +30,7 @@
         <div class="card-title">
             <h2>Enterprise plan</h2>
         </div>
-        <div class="card-body">
+        <div class="card-body enterprise">
             <p>Excellent for big companies</p>
             <ul class="feature-list">
                 <li class="feature-item">Unlimited open source repositories</li>
