--- a/flexbox-in-practice.html
+++ b/flexbox-in-practice.html
@@ -15,6 +15,11 @@
 <div>
     <a href="#">Link to Nothing
 </div>
+<main>
+    <section>
+        img src="img/
+    </section>
+</main>
 
 </body>
 </html>
