--- a/order-pizza.html
+++ b/order-pizza.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Order Pizza</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/custom.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/custom.css">
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Pizza World</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -24,44 +22,41 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Menu</a>
                 </li>
-
             </ul>
             <form class="d-flex">
                 <input class="form-control me-2" type="search" placeholder="Zip Code" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
+                <button class="btn btn-outline-primary text-nowrap" type="submit">Search stores near you!</button>
             </form>
         </div>
-                        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
-                <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z"/>
-                     </svg><button class="mx-1 bg-light border-0"> Sign Up
-        </button>
-       </div>
-</nav>
-<div class="container-fluid my-4 bg-light rounded-3 py-5" id="main-heading">
-    <h1 class="display-2 text-center bg-light bg-opacity-75">Welcome to Pizza World!</h1>
+        <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-fill" viewBox="0 0 16 16">
+            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1H3zm5-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" />
+        </svg>
+        <button class="mx-1 bg-light border-0"> Sign Up </button>
     </div>
-
+</nav>
+<div class="container-fluid my-4 bg-light rounded-3 py-5"  id="main-heading">
+    <h1 class="display-2 text-center bg-light bg-opacity-75">Welcome to Pizza World!</h1>
+</div>
 <div>
     <h2>Build Your Own Pizza!</h2>
-                     <ul class="nav nav-tabs">
-                       <li class="nav-item">
-                         <a class="nav-link active" aria-current="page" href="#"><span class="badge text-bg-secondary me-1">1</span>Size and Crust</a>
-                       </li>
-                       <li class="nav-item">
-                         <a class="nav-link" href="#"><span class="badge text-bg-secondary me-1">2</span>Cheese and Sauce</a>
-                       </li>
-                       <li class="nav-item">
-                  <a class="nav-link" href="#"><span class="badge text-bg-secondary me-1">3</span>Toppings</a>
-                       </li>
-                     </ul>
+    <ul class="nav nav-tabs">
+        <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">
+                <span class="badge text-bg-secondary me-1 rounded-circle">1</span>Size and Crust</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">
+                <span class="badge text-bg-secondary me-1 rounded-circle">2</span>Cheese and Sauce</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="#">
+                <span class="badge text-bg-secondary me-1 rounded-circle">3</span>Toppings </a>
+        </li>
+    </ul>
 </div>
-
-
-
-
-
-
-
-<script src="h  </li>ttps://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-</body>       </ul>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous">
+</script>
+</body>
+</ul>
 </html>
+
