--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -3,10 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <title>Jquery-Exercises</title>
-    <script src="js/intro-to-jquery.js"></script>
+
+    <link rel="stylesheet" href="css/intro-to-jquery.css">
 </head>
 <body>
-
+<h1> Codeup Recommended Software</h1>
+<div>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto aut dignissimos distinctio dolorum, ea eaque error esse minima nam nulla odit possimus quas, ratione reiciendis totam voluptatem voluptates. Magnam, minus.</p>
+    </p>
+    <ul>
+        <li class="build">React</li>
+        <li class="framework">Vue</li>
+        <li id="library">jQuery</li>
+        <li class="framework">Ruby</li>
+        <li class="framework">Sapphire</li>
+    </ul>
+</div>
 </body>
-<script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+<script src="js/jquery-3.6.1.min.js"></script>
+<script src="js/intro-to-jquery.js"></script>
 </html>
