--- a/ajax-store.html
+++ b/ajax-store.html
@@ -2,35 +2,50 @@
 <html>
 <head>
     <title>Online Store</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 <body>
+<div class="container-fluid my-1 bg-light rounded-3 py-4 px-0 " id="main-heading" style="background-image: url('img/toold.webp'); height: 346px; background-size: cover" >
+<!--    <h1 class="display-2 text-center bg-light bg-opacity-75 my-5">My Tool Store</h1>-->
+</div>
+<h1></h1>
 
-<h1>My Tool Store</h1>
-
-<table id="products">
+<table id="products" class="table">
     <thead>
         <tr>
-            <th>Title</th>
-            <th>Quantity</th>
-            <th>Price</th>
-            <th>Categories</th>
+            <th scope="col" class="table-info">Title</th>
+            <th scope="col" class="table-info">Quantity</th>
+            <th scope="col" class="table-info">Price</th>
+            <th scope="col" class="table-info">Categories</th>
         </tr>
     </thead>
     <tbody id="insertProducts"></tbody>
+    <button>Load Inventory</button>
 </table>
 
-<script src="https://code.jquery.com/jquery-2.2.4.min.js" integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44=" crossorigin="anonymous"></script>
 
+<script src="js/jquery-3.6.1.min.js"></script>
 <script>
-(function() {
-    "use strict";
-    // TODO: Create an AJAX GET request for the file under data/inventory.json
+    function inventoryLoad() {
+        $.ajax("data/inventory.json").done(function (data) {
+            data.forEach(function (hardware) {
+                let rowTemplate = `
+        <tr>
+           <td>$${hardware.title}</td>
+           <td>$${hardware.quantity}</td>
+           <td>$${hardware.price}</td>
+           <td>$${hardware.categories}</td>
 
-    // TODO: Take the data from inventory.json and append it to the products table
-    //       HINT: Your data should come back as a JSON object; use console.log() to inspect
-    //             its contents and fields
-    //       HINT: You will want to target #insertProducts for your new HTML elements
-})();
+        </tr>`;
+                $("#insertProducts").append(rowTemplate);
+
+            });
+
+
+        });
+
+    }
+    $("button").on("click", () => inventoryLoad());
 </script>
 
 </body>
