--- a/jquery_faq.html
+++ b/jquery_faq.html
@@ -4,9 +4,56 @@
     <meta charset="UTF-8">
     <title>National Parks Exercise</title>
   <link rel="stylesheet" href="css/jquery-dom-traversal.css">
+  <style>
+    .hidden {
+      visibility: hidden;
+    }
+  </style>
 
 </head>
 <body>
+<p>National Parks</p>
+<dl>
+  <dt>What is the biggest city in Wyoming?
+  </dt>
+  <dd class="invisible">The biggest city in Wyoming is the state capital, Cheyenne.</dd><br>
+  <dt>How many people go missing in national parks?</dt>
+  <dd class="invisible">"At least 1,600 people, and perhaps many times that number, remain missing on public lands under circumstances that defy easy explanation," said Jon Billman, a journalist who investigates disappearances, wrote for Outside Magazine.
+  </dd><br>
+  <dt>Who is the director of the National Park Service?
+  </dt>
+  <dd class="invisible">Charles F. "Chuck" Sams III is the Director of the National Park Service.</dd><br>
+  <dt></dt>
+  <dd class="invisible"></dd><br>
+  <dt>What government agency oversees the National Park Service?
+  </dt>
+  <dd class="invisible">The National Park Service is a bureau of the Department of the Interior. Directly overseeing its operation is the department's Assistant Secretary for Fish, Wildlife and Parks.
+  </dd><br>
+  <dt>How many employees are in the National Park Service?
+  </dt>
+  <dd class="invisible">Permanent, temporary, and seasonal employees: Approximately 20,000
+    Volunteers: More than 279,000 in 2019</dd><br>
+  <dt>How old is the National Park System?
+  </dt>
+  <dd class="invisible">The National Park Service was created by an act signed by President Woodrow Wilson on August 25, 1916. Yellowstone National Park was established by an act signed by President Ulysses S. Grant on March 1, 1872, as the nation's first national park. View the National Park System timeline.</dd><br>
+  <dt>What is the origin of the National Park Service arrowhead?
+  </dt>
+  <dd class="invisible">The arrowhead was authorized as the official National Park Service emblem by the Secretary of the Interior on July 20, 1951. The components of the arrowhead may have been inspired by key attributes of the National Park System, with the sequoia tree and bison representing vegetation and wildlife, the mountains and water representing scenic and recreational values, and the arrowhead itself representing historical and archeological values. Read more about the history of the arrowhead and other elements of NPS visual design.
+  </dd><br>
+  <dt>How many areas are in the National Park System?</dt>
+  <dd class="invisible">The system includes 423 areas covering more than 85 million acres in every state, the District of Columbia, American Samoa, Guam, Puerto Rico, and the Virgin Islands. These areas include national parks, monuments, battlefields, military parks, historical parks, historic sites, lakeshores, seashores, recreation areas, scenic rivers and trails, and the White House. Learn more about national park designations. See the complete list of National Park Service units and related areas by type and number.
+
+  </dd><br>
+  <dt>What is the largest national park site? Smallest?
+  </dt>
+  <dd class="invisible">Largest: Wrangell-St. Elias National Park and Preserve, AK, at 13.2 million acres
+    Smallest: Thaddeus Kosciuszko National Memorial, PA, at 0.02 acres
+  </dd><br>
+  <a href="#" id="toggle">Click to change</a>
+
+</dl> <br><br><br>
+
+
 <h3>Denali National Park</h3>
 <ul>
   <li>DNP is home to the highest peak in North America, Denali. Called "The High One" in language of the Athabascan tribe, this towering peak stands at 20,320 feet above sea level.</li>
