--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -2,19 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Mapbox Lecture</title>
-    <script src="js/keys.js"></script>
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js'></script>
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css' rel='stylesheet' />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-    <script src="js/mapbox-geocoder-utils.js"></script>
-    <style>
-        #map {
-            width: 75%;
-            height: 400px;
-        }
-    </style>
+    <head>
+        <meta charset="UTF-8">
+        <title>Mapbox Maps API</title>
+        <script src="js/keys.js"></script>
+        <script src='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js'></script>
+        <link href='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css' rel='stylesheet' />
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+        <script src="js/mapbox-geocoder-utils.js"></script>
+        <script src="js/jquery-3.6.1.min.js"></script>
+        <style>
+            #map {
+                width: 75%;
+                height: 400px;
+            }
+        </style>
+    </head>
 </head>
 <body>
 <div class="container row mx-auto">
@@ -32,28 +36,32 @@
 </form>
 
 <script>
+    const restaurante =
+
+
+
     mapboxgl.accessToken = MAPBOX_API_TOKEN;
     const map = new mapboxgl.Map({
         container: 'map', // container ID
         style: 'mapbox://styles/mapbox/outdoors-v11', // style URL
         center: [-74.5, 40], // starting position [lng, lat]
-        zoom: 11, // starting zoom
+        zoom: 7,  //starting zoom
         projection: 'globe' // display the map as a 3D globe
     });
     map.on('style.load', () => {
         map.setFog({}); // Set the default atmosphere style
     });
-    map.setZoom(12);
-    map.setCenter([-98.48962, 29.42704]);
+    map.setZoom(14);
+    map.setCenter([-115.1547432263104, 36.12005182407044]);
     document.getElementById("zoomSubmit").addEventListener('click', function(e){
         e.preventDefault();
         map.setZoom(document.getElementById("zoom").value);
     });
     const codeupMarker = new mapboxgl.Marker()
-        .setLngLat([-98.48962, 29.42692])
+        .setLngLat([-115.1547432263104, 36.12005182407044])
         .addTo(map);
     const codeupPopup = new mapboxgl.Popup()
-        .setHTML('<p class="mt-3" style="width: 250px;">Codeup</p>');
+        .setHTML('<p class="mt-3" style="width: 250px;">Bahama Breeze</p>');
     codeupMarker.setPopup(codeupPopup);
 
 
@@ -62,9 +70,9 @@
         geocode(address, token).then(function(coordinates){
             console.log(coordinates);
             coords = coordinates;
-        });
+        })
     }
-    getCoords("600 Navarro St, San Antonio", MAPBOX_API_TOKEN);
+    getCoords("375 Hughes Center Dr, Las Vegas", MAPBOX_API_TOKEN);
     console.log(coords);
 
     document.getElementById("setMarkerButton").addEventListener('click', function(e) {
@@ -76,6 +84,7 @@
             map.setCenter(coordinates);
         });
     });
+
 
 </script>
 </body>
