--- a/weather_map.html
+++ b/weather_map.html
@@ -4,8 +4,33 @@
     <meta charset="UTF-8">
     <title>Weather Map</title>
     <script src="js/keys.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.js'></script>
+    <link href='https://api.mapbox.com/mapbox-gl-js/v2.10.0/mapbox-gl.css' rel='stylesheet'/>
+    <script src="js/mapbox-geocoder-utils.js"></script>
 </head>
 <body>
+
+
+<div id='map' style='width: 400px; height: 300px;'></div>
+<script>
+    mapboxgl.accessToken = 'pk.eyJ1IjoiYWFybW9ycmkiLCJhIjoiY2w4ZXBqZzhtMDVmOTNvbnpxbml5N2o4cyJ9.n5GGNRFxy66LFGVgSfVfnA';
+    const map = new mapboxgl.Map({
+        container: 'map', // container ID
+        style: 'mapbox://styles/mapbox/streets-v11', // style URL
+        center: [-74.5, 40], // starting position [lng, lat]
+        zoom: 9, // starting zoom
+        projection: 'globe' // display the map as a 3D globe
+    });
+    map.on('style.load', () => {
+        map.setFog({}); // Set the default atmosphere style
+    });
+</script>
+
+<div class="card" style="width: 18rem">
+</div>
+
+
 <script src="js/jquery-3.6.1.min.js"></script>
 <script src="js/weather_map.js"></script>
 </body>
