--- a/weather_map.html
+++ b/weather_map.html
@@ -24,21 +24,23 @@
     </div>
 
     <div class="weather">
-        <h2 class="city">Weather in </h2>
-        <h1 class="temp">81°F</h1>
+        <h2 class="city-1">Weather in </h2>
+        <h1 class="temp-1">81°F</h1>
         <div><svg xmlns="http://www.w3.org/2000/svg" width="3.5em" height="3.5em" fill="currentColor" class="bi bi-clouds" viewBox="0 0 16 16">
             <path d="M16 7.5a2.5 2.5 0 0 1-1.456 2.272 3.513 3.513 0 0 0-.65-.824 1.5 1.5 0 0 0-.789-2.896.5.5 0 0 1-.627-.421 3 3 0 0 0-5.22-1.625 5.587 5.587 0 0 0-1.276.088 4.002 4.002 0 0 1 7.392.91A2.5 2.5 0 0 1 16 7.5z"/>
             <path d="M7 5a4.5 4.5 0 0 1 4.473 4h.027a2.5 2.5 0 0 1 0 5H3a3 3 0 0 1-.247-5.99A4.502 4.502 0 0 1 7 5zm3.5 4.5a3.5 3.5 0 0 0-6.89-.873.5.5 0 0 1-.51.375A2 2 0 1 0 3 13h8.5a1.5 1.5 0 1 0-.376-2.953.5.5 0 0 1-.624-.492V9.5z"/>
         </svg></div>
-        <div class="description">Cloudy </div>
-        <div class="humidity">Humidity: 60%</div>
-        <div class="wind">Wind speed:  km/h</div>
-        <div class="pressure">Pressure: </div>
+        <div class="card-date-1">Date:</div>
+        <div class="description-1">Cloudy </div>
+        <div class="humidity-1">Humidity: 60%</div>
+        <div class="wind-1">Wind speed:  km/h</div>
+        <div class="pressure-1">Pressure: </div>
+
     </div>
 </div>
     <div id='map' class="mx-auto mt-4 opacity-75"></div>
 </div><br>
-<div id="forecast-cards">
+<div id="forecast-cards" class="d-none">
     <div id="forecast-1" class="card border-primary mb-3" style="width:15rem; height:7rem;">
     <div class="card-date">Header</div>
     <div class="card-minMax text-primary">Min & Max Temp</div>
