--- a/warm-ups.html
+++ b/warm-ups.html
@@ -2,14 +2,21 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Warm-Ups</title>
+    <title>Warmups</title>
+    <style>
+        body {
+            background-color: black;
+            color: white;
+        }
+    </style>
 </head>
 <body>
-
-<script src ="js/utilities.js"></script>
-<script src ="js/warm-ups.js">
-
-
-</script>
+<h1>Warmups</h1>
+<input type="text" id="source">
+<p id="output"></p>
+<button>Change Heading</button>
+<script src="js/utils.js"></script>
+<script src="js/warmups.js"></script>
+<script src="js/jquery-3.6.1.min.js"></script>
 </body>
 </html>
