--- a/warm-ups.html
+++ b/warm-ups.html
@@ -15,8 +15,8 @@
 <input type="text" id="source">
 <p id="output"></p>
 <button>Change Heading</button>
-<script src="js/utils.js"></script>
-<script src="js/warmups.js"></script>
+<!--<script src="js/utils.js"></script>-->
 <script src="js/jquery-3.6.1.min.js"></script>
+<script src="js/warm-ups.js"></script>
 </body>
 </html>
