--- a/warm-ups.html
+++ b/warm-ups.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Warmups</title>
     <style>
+        h2{
+            padding: 20px;
+            border: 1px solid white;
+        }
         body {
             background-color: black;
             color: white;
@@ -15,8 +19,14 @@
 <input type="text" id="source">
 <p id="output"></p>
 <button>Change Heading</button>
+<br>
+<div id="loremParagraphs">
+    <h2>Lorem Generator</h2>
+    <button id="hotPinkIt">Hot Pink It</button>
+</div>
 <!--<script src="js/utils.js"></script>-->
 <script src="js/jquery-3.6.1.min.js"></script>
 <script src="js/warm-ups.js"></script>
 </body>
 </html>
+
