--- a/promises.html
+++ b/promises.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Promises</title>
 
+
 </head>
 <body>
 <div id="output"></div>
@@ -15,6 +16,8 @@
 
 </style>
 <script src="js/jquery-3.6.1.min.js"></script>
+<script src="js/keys.js"></script>
 <script src="js/promises.js"></script>
+
 </body>
 </html>
